<resources>
    <string name="app_name">Lab_6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home fragment -->
    <string name="good_morning">Good Morning,</string>
    <string name="my_name">Josúe Samuel Argueta Hernández</string>

    <!-- Your Search fragment -->
    <string name="search">Search</string>
    <string name="top_genres">Your top genres</string>
    <string name="electronica">Electrónica</string>
    <string name="classic">Clásica</string>
    <string name="pop">Pop</string>
    <string name="hardstyle">Hardstyle</string>
    <!-- Your Library fragment -->
    <string name="your_library">Your Library</string>
    <string name="most_recent">Most recent</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="songs">songs</string>
</resources>