<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_fragment_Info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:accessibilityLiveRegion="assertive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <TextView
            android:id="@+id/txtView_fragment_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_genres"
            android:textColor="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/txtView_fragment_search"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_fragment_Info">

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:backgroundTint="#076BBA"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/electronica"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:backgroundTint="#C6B40E"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classic"
                    android:textColor="@color/white"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:backgroundTint="#CF8B26"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop"
                android:textColor="@color/white"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="160dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_margin="8dp"
            android:backgroundTint="#D64778"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hardstyle"
                    android:textColor="@color/white"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"/>

        </androidx.cardview.widget.CardView>
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>