<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".YourLibraryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_fragment_yourLibrary_datas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imgBtn_fragment_yourLibrary_userIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/background_round"
            android:src="@drawable/ic_round_person_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtView_fragment_YourLibrary_yourLibraryTxt"/>

        <TextView
            android:id="@+id/txtView_fragment_YourLibrary_yourLibraryTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/your_library"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgBtn_fragment_yourLibrary_userIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imgBtn_fragment_yourLibrary_searchIcon"/>

        <ImageButton
            android:id="@+id/imgBtn_fragment_yourLibrary_searchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:src="@drawable/ic_baseline_search_24"
            android:layout_marginStart="120dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtView_fragment_YourLibrary_yourLibraryTxt"
            app:layout_constraintEnd_toStartOf="@+id/imgBtn_fragment_yourLibrary_AddIcon"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageButton
            android:id="@+id/imgBtn_fragment_yourLibrary_AddIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toEndOf="@+id/imgBtn_fragment_yourLibrary_searchIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_fragment_yourLibrary_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_fragment_yourLibrary_datas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <LinearLayout
            android:id="@+id/linearLayout_fragment_yourLibrary_recents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_swap_vert_24"
                android:backgroundTint="@color/black"
                android:layout_marginStart="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/most_recent"
                android:textColor="@color/white"
                android:layout_marginTop="2dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_fragment_yourLibrary_playSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_fragment_yourLibrary_music">
        <ImageButton
            android:id="@+id/imgBtn_fragment_yourLibrary_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_round_favorite_24"
            android:padding="15dp"
            android:background="@drawable/bg_color"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/txtView_fragment_YourLibrary_likedSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liked_songs"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@+id/imgBtn_fragment_yourLibrary_favorite"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/txtView_fragment_YourLibrary_amountSongs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtView_fragment_YourLibrary_likedSongs"
            app:layout_constraintStart_toEndOf="@+id/imgBtn_fragment_yourLibrary_favorite"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/songs"
            android:layout_marginStart="2dp"
            app:layout_constraintTop_toBottomOf="@+id/txtView_fragment_YourLibrary_likedSongs"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtView_fragment_YourLibrary_amountSongs"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- TODO: Update blank fragment layout -->


</androidx.constraintlayout.widget.ConstraintLayout>